# vscode-needle

./: .gitignore  .oxfmtrc.json  .ultracite.json  .vscode-test.mjs  .vscodeignore  CHANGELOG.md  LICENSE  README.md  bench.ts  biome.json  fzf  package.json  test-rust.js  tsconfig.json
.github/workflows/: release.yml
docs/: GITHUB_RELEASES.md  OPENVSX_PUBLISHING.md
docs/plans/: 2025-10-24-go-to-fuzzy-improvements.md
rust-fuzzy/: Cargo.toml  index.js  package.json  rust-fuzzy.darwin-arm64.node
rust-fuzzy/src/: lib.rs  lib.rs.backup
rust-needle/: .vscodeignore  Cargo.toml  index.d.ts  index.js  package.json  rust-needle.darwin-arm64.node
rust-needle/src/: lib.rs
src/: cache.ts  logger.ts  main.ts  search.ts
test/: best-match.test.ts  fuzzy-matching.test.ts  integration.test.ts  native.test.ts  parsing.test.ts  rust-fuzzy.test.ts
test/e2e/: extension.e2e.test.ts
