[package]
name = "rust-fuzzy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2"
nucleo-matcher = "0.3"

[build-dependencies]
napi-build = "2"

[features]
perf-logging = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
