[package]
name = "rust-needle"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[package.metadata.napi]
name = "rust-needle"
